<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--    자식 레이아웃으로 linearLayout 두개 더 추가-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
<!--        baselineAligned를 트루로 주거나 생략하면 중간으로 맞춰서 보여지고, 펠스로 하면 위에 붙여져서 보여짐-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/btn1"
            android:textSize="20sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/btn2"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:text="@string/btn3"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:baselineAligned="false"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginRight="15dp"
            android:text="@string/text1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:layout_marginRight="15dp"
            android:text="@string/text2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60dp"
            android:text="@string/text3"/>

    </LinearLayout>
</LinearLayout>